--- a/pages/donate.html
+++ b/pages/donate.html
@@ -83,7 +83,7 @@
                         <h1 class="text-xl sm:text-2xl md:text-3xl font-bold">
                             💰 SUPPORT US <span class="text-[#d49163]">BY DONATE TO SERVER</span>
                         </h1>
-                        <p class="text-gray-400 text-sm mt-2">Donasi dari kamu bisa membantu kami membangun negeri</p>
+                        <p class="text-gray-400 text-sm mt-2">Your donation can help us develop the country</p>
                     </div>
 
                     <!-- Container for donation options -->
