--- a/pages/staff.html
+++ b/pages/staff.html
@@ -131,7 +131,7 @@
 
                         <!-- List of Divisions -->
                         <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-5 w-full">
-                            <div class="relative bg-zinc-800 bg-opacity-90 rounded-xl p-4 shadow-lg border border-[#e7a77c] 
+                            <div class="relative bg-zinc-800 bg-opacity-90 rounded-xl p-4 shadow-lg 
                             transition-all duration-500 hover:scale-105 hover:shadow-xl group cursor-pointer">
                                 <h3
                                     class="text-base font-semibold text-[#e7a77c] group-hover:text-[#ffcc99] transition-all duration-500">
@@ -141,7 +141,7 @@
                                 </p>
                             </div>
 
-                            <div class="relative bg-zinc-800 bg-opacity-90 rounded-xl p-4 shadow-lg border border-[#e7a77c] 
+                            <div class="relative bg-zinc-800 bg-opacity-90 rounded-xl p-4 shadow-lg 
                             transition-all duration-500 hover:scale-105 hover:shadow-xl group cursor-pointer">
                                 <h3
                                     class="text-base font-semibold text-[#e7a77c] group-hover:text-[#ffcc99] transition-all duration-500">
@@ -151,7 +151,7 @@
                                 </p>
                             </div>
 
-                            <div class="relative bg-zinc-800 bg-opacity-90 rounded-xl p-4 shadow-lg border border-[#e7a77c] 
+                            <div class="relative bg-zinc-800 bg-opacity-90 rounded-xl p-4 shadow-lg 
                             transition-all duration-500 hover:scale-105 hover:shadow-xl group cursor-pointer">
                                 <h3
                                     class="text-base font-semibold text-[#e7a77c] group-hover:text-[#ffcc99] transition-all duration-500">
@@ -161,7 +161,7 @@
                                 </p>
                             </div>
 
-                            <div class="relative bg-zinc-800 bg-opacity-90 rounded-xl p-4 shadow-lg border border-[#e7a77c] 
+                            <div class="relative bg-zinc-800 bg-opacity-90 rounded-xl p-4 shadow-lg 
                             transition-all duration-500 hover:scale-105 hover:shadow-xl group cursor-pointer">
                                 <h3
                                     class="text-base font-semibold text-[#e7a77c] group-hover:text-[#ffcc99] transition-all duration-500">
@@ -171,7 +171,7 @@
                                 </p>
                             </div>
 
-                            <div class="relative bg-zinc-800 bg-opacity-90 rounded-xl p-4 shadow-lg border border-[#e7a77c] 
+                            <div class="relative bg-zinc-800 bg-opacity-90 rounded-xl p-4 shadow-lg 
                             transition-all duration-500 hover:scale-105 hover:shadow-xl group cursor-pointer">
                                 <h3
                                     class="text-base font-semibold text-[#e7a77c] group-hover:text-[#ffcc99] transition-all duration-500">
@@ -181,7 +181,7 @@
                                 </p>
                             </div>
 
-                            <div class="relative bg-zinc-800 bg-opacity-90 rounded-xl p-4 shadow-lg border border-[#e7a77c] 
+                            <div class="relative bg-zinc-800 bg-opacity-90 rounded-xl p-4 shadow-lg 
                             transition-all duration-500 hover:scale-105 hover:shadow-xl group cursor-pointer">
                                 <h3
                                     class="text-base font-semibold text-[#e7a77c] group-hover:text-[#ffcc99] transition-all duration-500">
@@ -191,7 +191,7 @@
                                 </p>
                             </div>
 
-                            <div class="relative bg-zinc-800 bg-opacity-90 rounded-xl p-4 shadow-lg border border-[#e7a77c] 
+                            <div class="relative bg-zinc-800 bg-opacity-90 rounded-xl p-4 shadow-lg 
                             transition-all duration-500 hover:scale-105 hover:shadow-xl group cursor-pointer">
                                 <h3
                                     class="text-base font-semibold text-[#e7a77c] group-hover:text-[#ffcc99] transition-all duration-500">
@@ -201,7 +201,7 @@
                                 </p>
                             </div>
 
-                            <div class="relative bg-zinc-800 bg-opacity-90 rounded-xl p-4 shadow-lg border border-[#e7a77c] 
+                            <div class="relative bg-zinc-800 bg-opacity-90 rounded-xl p-4 shadow-lg 
                             transition-all duration-500 hover:scale-105 hover:shadow-xl group cursor-pointer">
                                 <h3
                                     class="text-base font-semibold text-[#e7a77c] group-hover:text-[#ffcc99] transition-all duration-500">
