--- a/pages/recruitment.html
+++ b/pages/recruitment.html
@@ -93,7 +93,7 @@
                             <h2 class="text-lg sm:text-xl font-semibold text-white text-center">🛡️ Moderator Chat</h2>
                             <p class="text-sm text-gray-300 text-center">Helps keep the chat atmosphere comfortable and
                                 conducive.</p>
-                            <p class="text-xs text-red-500 text-center mt-auto">Status : Close</p>
+                            <p class="text-xs text-green-400 text-center mt-auto">Status : Open</p>
                         </div>
                         <div
                             class="flex flex-col gap-4 bg-zinc-800 bg-opacity-90 bg-gradient-to-b from-[#2e2e2e] to-black rounded-xl p-5 w-96 sm:w-72 shadow-lg border-2 border-[#e7a77c] transition-all duration-500 hover:scale-105 hover:shadow-2xl hover:border-[#ffcc99] group cursor-pointer">
