--- a/pages/donate.html
+++ b/pages/donate.html
@@ -26,7 +26,7 @@
                     class="text-white hover:text-[#e7a77c] transition-all duration-300">Home</a>
                 <a href="../index.html#about"
                     class="text-white hover:text-[#e7a77c] transition-all duration-300">About</a>
-                <a href="leaderboard.html"
+                <a href="leaderboard/index.html"
                     class="text-white hover:text-[#e7a77c] transition-all duration-300">Leaderboard</a>
                 <a href="staff.html" class="text-white hover:text-[#e7a77c] transition-all duration-300">Staff</a>
                 <a href="donate.html" class="text-white hover:text-[#e7a77c] transition-all duration-300">Donate</a>
@@ -53,7 +53,7 @@
                 <a href="../index.html#about"
                     class="block text-white px-6 py-3 rounded-lg hover:bg-gray-800 hover:text-[#aa724d] transition-all duration-300">📸
                     About</a>
-                <a href="leaderboard.html"
+                <a href="leaderboard/index.html"
                     class="block text-white px-6 py-3 rounded-lg hover:bg-gray-800 hover:text-[#aa724d] transition-all duration-300">🏆
                     Leaderboard</a>
                 <a href="staff.html"
