--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <nav class="hidden md:flex items-center gap-6">
                 <a href="#home" class="text-white hover:text-[#e7a77c] transition-all duration-300">Home</a>
                 <a href="#about" class="text-white hover:text-[#e7a77c] transition-all duration-300">About</a>
-                <a href="pages/leaderboard/index.html"
+                <a href="pages/leaderboard.html"
                     class="text-white hover:text-[#e7a77c] transition-all duration-300">Leaderboard</a>
                 <a href="pages/staff.html" class="text-white hover:text-[#e7a77c] transition-all duration-300">Staff</a>
                 <a href="pages/donate.html"
@@ -59,7 +59,7 @@
                 <a href="#about"
                     class="block text-white px-6 py-3 rounded-lg hover:bg-gray-800 hover:text-[#aa724d] transition-all duration-300">📸
                     About</a>
-                <a href="pages/leaderboard/index.html"
+                <a href="pages/leaderboard.html"
                     class="block text-white px-6 py-3 rounded-lg hover:bg-gray-800 hover:text-[#aa724d] transition-all duration-300">🏆
                     Leaderboard</a>
                 <a href="pages/staff.html"
