--- a/pages/leaderboard.html
+++ b/pages/leaderboard.html
@@ -16,22 +16,22 @@
     <header class="fixed top-0 left-0 w-full z-50 bg-black/30 backdrop-blur-md text-white shadow-md">
         <div class="container mx-auto flex items-center justify-between px-6 py-4">
             <!-- Logo -->
-            <a href="../index.html">
-                <img src="../assets/img/logo2.png" class="w-24 sm:w-32" alt="smkn5kiev">
+            <a href="../../index.html">
+                <img src="../../assets/img/logo2.png" class="w-24 sm:w-32" alt="smkn5kiev">
             </a>
 
             <!-- Desktop Navigation -->
             <nav class="hidden md:flex items-center gap-6">
-                <a href="../index.html#home"
+                <a href="../../index.html#home"
                     class="text-white hover:text-[#e7a77c] transition-all duration-300">Home</a>
-                <a href="../index.html#about"
+                <a href="../../index.html#about"
                     class="text-white hover:text-[#e7a77c] transition-all duration-300">About</a>
                 <a href="leaderboard.html"
                     class="text-white hover:text-[#e7a77c] transition-all duration-300">Leaderboard</a>
-                <a href="staff.html" class="text-white hover:text-[#e7a77c] transition-all duration-300">Staff</a>
-                <a href="donate.html" class="text-white hover:text-[#e7a77c] transition-all duration-300">Donate</a>
-                <a href="rules.html" class="text-white hover:text-[#e7a77c] transition-all duration-300">Rules</a>
-                <a href="recruitment.html"
+                <a href="../staff.html" class="text-white hover:text-[#e7a77c] transition-all duration-300">Staff</a>
+                <a href="../donate.html" class="text-white hover:text-[#e7a77c] transition-all duration-300">Donate</a>
+                <a href="../rules.html" class="text-white hover:text-[#e7a77c] transition-all duration-300">Rules</a>
+                <a href="../recruitment.html"
                     class="bg-[#aa724d] hover:bg-[#6d4c35] border-none py-2 px-5 w-auto rounded-xl text-lightcoral shadow-[0_0.4rem_0_0_#dfd9d9] cursor-pointer hover:bg-lightcoral hover:text-white  active:shadow-[0_0.2rem_0_0_#dfd9d9] active:translate-y-1 disabled:cursor-auto disabled:text-gray-500 text-center">Recruitment</a>
             </nav>
 
@@ -47,25 +47,25 @@
             <!-- Mobile Dropdown Menu -->
             <div id="dropdown-menu"
                 class="hidden md:hidden absolute top-16 right-4 w-64 bg-black/90 border border-[#aa724d] p-4 rounded-xl shadow-lg text-center backdrop-blur-lg transition-all duration-300">
-                <a href="../index.html#home"
+                <a href="../../index.html#home"
                     class="block text-white px-6 py-3 rounded-lg hover:bg-gray-800 hover:text-[#aa724d] transition-all duration-300">🏠
                     Home</a>
-                <a href="../index.html#about"
+                <a href="../../index.html#about"
                     class="block text-white px-6 py-3 rounded-lg hover:bg-gray-800 hover:text-[#aa724d] transition-all duration-300">📸
                     About</a>
                 <a href="leaderboard.html"
                     class="block text-white px-6 py-3 rounded-lg hover:bg-gray-800 hover:text-[#aa724d] transition-all duration-300">🏆
                     Leaderboard</a>
-                <a href="staff.html"
+                <a href="../staff.html"
                     class="block text-white px-6 py-3 rounded-lg hover:bg-gray-800 hover:text-[#aa724d] transition-all duration-300">👥
                     Staff</a>
-                <a href="donate.html"
+                <a href="../donate.html"
                     class="block text-white px-6 py-3 rounded-lg hover:bg-gray-800 hover:text-[#aa724d] transition-all duration-300">💰
                     Donate</a>
-                <a href="rules.html"
+                <a href="../rules.html"
                     class="block text-white px-6 py-3 rounded-lg hover:bg-gray-800 hover:text-[#aa724d] transition-all duration-300">📜
                     Rules</a>
-                <a href="recruitment.html"
+                <a href="../recruitment.html"
                     class="block text-white bg-[#aa724d] hover:bg-[#6d4c35] px-6 py-3 rounded-lg transition-all duration-300">📚
                     Recruitment</a>
             </div>
@@ -115,7 +115,7 @@
             <div class="grid grid-cols-1 md:grid-cols-2 gap-8 items-center">
                 <!-- Logo & Deskripsi -->
                 <div class="text-center md:text-left" data-aos="fade-out" data-aos-anchor-placement="top-bottom">
-                    <img src="../assets/img/logo2.png" class="w-52 mx-auto md:mx-0">
+                    <img src="../../assets/img/logo2.png" class="w-52 mx-auto md:mx-0">
                     <p class="text-sm sm:text-base leading-relaxed mt-4 max-w-md mx-auto md:mx-0">
                         We created this server to have fun and build a friendly community. We'd be thrilled if you
                         joined us, and we're here to welcome you with open arms! Let's make some great memories
@@ -153,6 +153,6 @@
 
 </body>
 <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-<script src="../JS/script.js"></script>
+<script src="../../JS/script.js"></script>
 
 </html>
